--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   firebase_core: ^0.7.0
   firebase_storage:	^7.0.0
   firebase_database: ^6.0.0
-
+  firebase_messaging: ^5.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
